--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,7 @@
 </script>
 </head>
 <body>
-<h1>Contact</h1>
-<h2>The MSP Concierge Team</h2>
+<h2>The Concierge Team</h2>
 <div id="wrapper" class="container_12 clearfix">
 	<div id="quicknav" class="grid_12">
 		<a class="quicknavgrid_3 quicknav alpha" href="http://www.naturalcapitalproject.org/people.html#Verutes" target="_blank">
@@ -57,21 +56,27 @@
 	</div>
 </div>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h2>NatCap and Marine Planning</h2>
-<img src="img/logo_NatCap.jpg" align="left">The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. While NatCap has some experience with marine planning, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the MSP community and added our experience to the mix. 
+<a name="use-cases"></a><h2>NatCap Marine Planning Use-Cases</h2>
+<img src="img/logo_NatCap.jpg" align="left">The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. While NatCap has some experience with marine planning, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the marine planning community and added our experience to the mix. 
 <p></p>
 <ul id="folio_scroller">
 <li><span>NatCap Marine Planning Use-Cases</span><iframe width='600px' height='300px' frameBorder='0' src='natcap_msp_usecases.html'></iframe></li>
 </ul> 
 <p></p><br>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h2>Acknowledgements</h2>
+<a name="acknowledgements"></a><h2>Acknowledgements</h2>
 Numerous colleagues from the Natural Capital Project contributed to this website.  We would like to thank...<br>
 <b>Anne Guerry, Spencer Wood, Katie Arkema, Greg Guannel, Rob Griffin, Amy Rosenthal,<br>
-Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Yi Xi, Kelly Biedenweg,<br>
+Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Yi Xi, Doug Denu,<br>
 Mike Papenfus, Jeremy Davies, Matt Marsik, Susan Langridge, and Mary Ruckelshaus</b>
 <p></p>
-Development of this website was made possible through support from the <b>Gordon and Betty Moore Foundation</b>.
+We also thank our partners, without whom this work would not have been possible...<br>
+<b>World Wildlife Fund (WWF), The Nature Conservancy (TNC),<br>Belize Coastal Zone Management Authority and Institute (CZMAI),<br>Northeast Regional Ocean Council (NROC), Center for Ocean Solutions (COS),<br>Downstream Strategies, Barbados Coastal Zone Management Unit (CZMU),<br>Inter-American Development Bank (IDB), West Coast Aquatics,<br>National Oceanic and Atmospheric Administration (NOAA), and many others.</b>
+<p></p>
+Beta testing and design input were provided by...<br>
+<b>Amélie Augé, Jorge Ramirez, Britta Heine, Jan Kleine Büning,<br>Brazilian Future Ocean Panel (PainelMar), Mike Barrett,<br> Libby Whiting, Leo Dutra, Adam Kowalski, Holger Janssen,<br> Anne Walton, Sushmita Majumdar, and Hedley Grantham</b>
+<p></p>
+This website was developed with support from the <b>Gordon and Betty Moore Foundation</b>.
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
