--- a/data.html
+++ b/data.html
@@ -183,7 +183,7 @@ There are many useful marine planning data sources available online, including:
 <li><a href="http://modis.gsfc.nasa.gov/data/dataprod/" target="_blank">MODIS</a> - Products from a variety of disciplines, including <b>oceanography, biology, and atmospheric science</b></li>
 <li><a href="http://www.naturalearthdata.com/" target="_blank">Natural Earth</a> - A <b>cartographic dataset</b> available at 1:10m, 1:50m, and 1:110 million scales</li>
 <li><a href="https://data.nceas.ucsb.edu/" target="_blank">NCEAS Data Repository</a> - Research datasets collected and collated as part of <b>research synthesis</b> activities</li>
-<li><a href="http://marinecadastre.gov/" target="_blank">NOAA Multipurpose Marine Cadaster</a> - Data for the <b>offshore energy and marine planning communities</b></li>
+<li><a href="http://marinecadastre.gov/" target="_blank">BOEM/NOAA - MarineCadastre.gov</a> - Data for the <b>offshore energy and marine planning communities</b></li>
 <li><a href="http://openfisheries.org/" target="_blank">OpenFisheries.org</a> - A platform for aggregating <b>global fishery data</b></li>
 <li><a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> - Download points, lines, and polygons representing a wide range of <a href="http://wiki.openstreetmap.org/wiki/Map_Features"><b>cultural features</b></a></li>
 <li><a href="http://www.wri.org/our-work/project/reefs-risk" target="_blank">Reefs at Risk Database</a> - A global database of <b>coral reefs</b> and threats from a wide range of human activities</li>
