--- a/frame.html
+++ b/frame.html
@@ -39,7 +39,8 @@
 	<li></li>
 	<li><a href="gallery.html" target="content">Gallery</a></li>
 	<li><a href="links.html" target="content">Links</a></li>
-	<li><a href="contact.html" target="content">Contact |<br>MSP Use-Cases</a></li>
+	<li><a href="contact.html#use-cases" target="content">Use-Cases</a></li>
+	<li><a href="contact.html#acknowledgements" target="content">Credits</a></li>
 </ul>
 </body>
 </html>
