Round of changes based on Moore feedback
- Redo of use case map
- Updated links to new NatCap website

--- a/contact.html
+++ b/contact.html
@@ -32,23 +32,23 @@
 <h2>The Concierge Team</h2>
 <div id="wrapper" class="container_12 clearfix">
 	<div id="quicknav" class="grid_12">
-		<a class="quicknavgrid_3 quicknav alpha" href="http://www.naturalcapitalproject.org/people.html#Verutes" target="_blank">
+		<a class="quicknavgrid_3 quicknav alpha" href="http://www.naturalcapitalproject.org/people/" target="_blank">
 				<p style=""><img alt="Gregg Verutes" src="img/gregg.png" /></p>
 				<h4 class="title ">Gregg Verutes</h4>
 				<p>Author & Webmaster</p>
 			
 		</a>
-		<a class="quicknavgrid_3 quicknav" href="http://www.naturalcapitalproject.org/people.html#Wyatt" target="_blank">
+		<a class="quicknavgrid_3 quicknav" href="http://www.naturalcapitalproject.org/people/" target="_blank">
 				<p style=""><img alt="Katherine Wyatt" src="img/katherine.png" /></p>
 				<h4 class="title ">Katherine Wyatt</h4>
 				<p>Contributing Author</p>
 		</a>		
-		<a class="quicknavgrid_3 quicknav" href="http://www.naturalcapitalproject.org/people.html#Fisher" target="_blank">
+		<a class="quicknavgrid_3 quicknav" href="http://www.naturalcapitalproject.org/people/" target="_blank">
 				<p style=""><img alt="Dave Fisher" src="img/dave.png" /> </p>					
 				<h4 class="title ">Dave Fisher</h4>
 				<p>Tool Development</p>
 		</a>
-		<a class="quicknavgrid_3 quicknav" href="http://www.naturalcapitalproject.org/people.html#Silver" target="_blank">
+		<a class="quicknavgrid_3 quicknav" href="http://www.naturalcapitalproject.org/people/" target="_blank">
 				<p style=""><img alt="Jess Silver" src="img/jess.png" /> </p>
 				<h4 class="title ">Jess Silver</h4>
 				<p>Contributing Author</p>
@@ -57,7 +57,7 @@
 </div>
 <div class="hr dotted clearfix">&nbsp;</div>
 <a name="use-cases"></a><h2>NatCap Marine Planning Use-Cases</h2>
-<img src="img/logo_NatCap.jpg" align="left">The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. While NatCap has some experience with marine planning, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the marine planning community and added our experience to the mix. 
+<img src="img/logo_NatCap.jpg" align="left">The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/invest/" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. While NatCap has some experience with marine planning, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the marine planning community and added our experience to the mix. 
 <p></p>
 <ul id="folio_scroller">
 <li><span>NatCap Marine Planning Use-Cases</span><iframe width='600px' height='300px' frameBorder='0' src='natcap_msp_usecases.html'></iframe></li>
