--- a/frame.html
+++ b/frame.html
@@ -17,7 +17,7 @@
 <img src="img/logo_Concierge.png">
 <br><br>
 <ul id="menu-v">
-	<li><a href="welcome.html" target="content"><b>Home</b></a>
+	<li><a href="welcome.html" target="content">Overview</a>
 	</li>
     <li><a href="scope.html" target="content">1. Scope</a>
     </li>
