--- a/welcome.html
+++ b/welcome.html
@@ -95,7 +95,7 @@ We encourage you to explore the six steps of this approach by clicking the menu 
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>NatCap Marine Planning Use-Cases</h2>
-Learning about different marine planning projects can highlight methods and tools that can be adapted to your own projects. The <a href="http://www.naturalcapitalproject.org"  target="_blank">Natural Capital Project</a> (or "NatCap") has compiled lessons from six <a href="contact.html"><b>use-cases</b></a> in which we have been involved around the world. At the bottom of each step's page, we summarize how that step was accomplished for select use-cases. We also offer links to additional resources for exploring examples from around the world.
+Learning about different marine planning projects can highlight methods and tools that can be adapted to your own projects. The <a href="http://www.naturalcapitalproject.org"  target="_blank">Natural Capital Project</a> (or "NatCap") has compiled lessons from seven <a href="contact.html"><b>use-cases</b></a> in which we have been involved around the world. At the bottom of each step's page, we summarize how that step was accomplished for select use-cases. We also offer links to additional resources for exploring examples from around the world.
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
