Minor changes for Jan 2016
rerelease with marine team's suggested edits; about to begin DEL use
case

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@ Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Yi Xi, Doug Denu,
 Mike Papenfus, Jeremy Davies, Matt Marsik, Susan Langridge, and Mary Ruckelshaus</b>
 <p></p>
 We also thank our partners, without whom this work would not have been possible...<br>
-<b>World Wildlife Fund (WWF), The Nature Conservancy (TNC),<br>Belize Coastal Zone Management Authority and Institute (CZMAI),<br>Northeast Regional Ocean Council (NROC), Center for Ocean Solutions (COS),<br>Downstream Strategies, Barbados Coastal Zone Management Unit (CZMU),<br>Inter-American Development Bank (IDB), West Coast Aquatics,<br>National Oceanic and Atmospheric Administration (NOAA), and many others.</b>
+<b>World Wildlife Fund (WWF), The Nature Conservancy (TNC), West Coast Aquatics,<br>Belize Coastal Zone Management Authority and Institute (CZMAI),<br>Northeast Regional Ocean Council (NROC), Center for Ocean Solutions (COS),<br>Downstream Strategies, Barbados Coastal Zone Management Unit (CZMU),<br>Inter-American Development Bank (IDB), Healthy Reefs Initiative,<br>National Oceanic and Atmospheric Administration (NOAA), and many others.</b>
 <p></p>
 Beta testing and design input were provided by...<br>
 <b>Amélie Augé, Jorge Ramirez, Britta Heine, Jan Kleine Büning,<br>Brazilian Future Ocean Panel (PainelMar), Mike Barrett,<br> Libby Whiting, Leo Dutra, Adam Kowalski, Holger Janssen,<br> Anne Walton, Sushmita Majumdar, and Hedley Grantham</b>
