--- a/frame.html
+++ b/frame.html
@@ -17,7 +17,7 @@
 <img src="img/logo_Concierge.png">
 <br><br>
 <ul id="menu-v">
-	<li><a href="welcome.html" target="content">Overview</a>
+	<li><a href="welcome.html" target="content">Welcome</a>
 	</li>
     <li><a href="scope.html" target="content">1. Scope</a>
     </li>
@@ -37,10 +37,12 @@
 <br> 	
 <ul id="menu-v">
 	<li></li>
+	<li><a href="feedback.html" target="content">Feedback</a></li>
 	<li><a href="gallery.html" target="content">Gallery</a></li>
+	<li><a href="marine_invest.html" target="content">Marine InVEST</a></li>
 	<li><a href="links.html" target="content">Links</a></li>
 	<li><a href="contact.html#use-cases" target="content">Use-Cases</a></li>
-	<li><a href="contact.html#acknowledgements" target="content">Credits</a></li>
+	<li><a href="contact.html#acknowledgements" target="content">Acknowledgements</a></li>
 </ul>
 </body>
 </html>
