--- a/gallery.html
+++ b/gallery.html
@@ -17,11 +17,13 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-787904-11', 'auto');
   ga('send', 'pageview');
+
 </script>
 </head>
 <body>
 
-<div class="info">Gallery | <a class="about-link" href="">About</a></div>
+        
+<div class="info"><a href="javascript:void( window.open('http://www.formpl.us/form/1785494162/', 'blank','scrollbars=yes,toolbar=no,width=700,height=500'))">Contribute</a> | <a class="about-link" href="">About</a></div>
 <div class="about-box">
 
     <div class="about-close" style="cursor: pointer;">x</div>
