--- a/inseam.html
+++ b/inseam.html
@@ -34,7 +34,7 @@
 InSEAM is a participatory geographic information system (PGIS) that allows multiple users to draw features on a base map.  Rather than mailing paper maps to stakeholders, it allows your team to convene over the Internet and share spatial information.   These drawings and annotations can then be compiled and downloaded as digital layers to faciliate the scenario development process.  InSEAM requires an Internet connection so it may not be the right tool in remote places with limited bandwidth.  Nevertheless, we have found that people tend to trust data more when they participate in its collection.  Allowing people to get involved in ecosystem service citizen science can be an extremely useful means to collect data and understand how your study area will change over time.<br>
 <p></p>
 <ul id="folio_scroller">
-<li><iframe src="http://www.youtube.com/embed/fxJfn-NOjGM?autoplay=1" width="600" height="300" frameborder="0" allowfullscreen></iframe></li>
+<li><iframe width="600" height="300" src="https://www.youtube.com/embed/fxJfn-NOjGM?rel=0" frameborder="0" allowfullscreen></iframe></li>
 </ul>
 <p></p><br>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
