--- a/iterate.html
+++ b/iterate.html
@@ -171,6 +171,7 @@ The following is a diagram of an approach for ecosystem service assessment, that
 <li>Plan to iterate through the science-policy process to ensure your process is responsive to changing conditions.</li>
 <li>Iterate through the Scenarios &#8596; Analyze &#8596; Synthesize steps to design a "preferred" spatial plan (<a href="docs/Arkema_etal_2015_PNAS.pdf" target="_blank">Arkema et al. 2015</a>)</li>
 </ul>
+<img src="img/ribbon_concierge.png"><br>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: How do I know when to move on to the next step?</b><br>
@@ -206,7 +207,7 @@ The second iteration of the Informed Management scenario predicted a dramatic in
 <img alt="" src="img/iterate_bz_folio_2.png"></li>
 </ul>
 <p></p><br>
-<h4>Vancouver Island</h4>
+<h4>Bahamas</h4>
 Coming soon
 <p></p><br>
 </body>
