--- a/natcap_msp_usecases.html
+++ b/natcap_msp_usecases.html
@@ -30,7 +30,7 @@ var cartoLight = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}
 var map = new L.Map('map', {
   zoomControl: true,
   layer_selector: true,
-  layers: [cartoLight],
+  layers: [mapboxTerrain],
   center: [20, -43],
   zoom: 2,
   minZoom: 2,
