--- a/data.html
+++ b/data.html
@@ -184,11 +184,13 @@ There are many useful marine planning data sources available online, including:
 <li><a href="http://www.naturalearthdata.com/" target="_blank">Natural Earth</a> - A <b>cartographic dataset</b> available at 1:10m, 1:50m, and 1:110 million scales</li>
 <li><a href="https://data.nceas.ucsb.edu/" target="_blank">NCEAS Data Repository</a> - Research datasets collected and collated as part of <b>research synthesis</b> activities</li>
 <li><a href="http://marinecadastre.gov/" target="_blank">BOEM/NOAA - MarineCadastre.gov</a> - Data for the <b>offshore energy and marine planning communities</b></li>
+<li><a href="https://github.com/OHI-Science/ohi-global/releases" target="_blank">Ocean Health Index</a> - Annual global assessments: data, methods, and code for to represent <b>ocean benefits to humans</b></a></li>
 <li><a href="http://openfisheries.org/" target="_blank">OpenFisheries.org</a> - A platform for aggregating <b>global fishery data</b></li>
-<li><a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> - Download points, lines, and polygons representing a wide range of <a href="http://wiki.openstreetmap.org/wiki/Map_Features"><b>cultural features</b></a></li>
+<li><a href="http://learnosm.org/en/osm-data/osm-in-qgis/" target="_blank">OpenStreetMap</a> - Download points, lines, and polygons representing a wide range of <b>cultural features</b></a></li>
 <li><a href="http://www.wri.org/our-work/project/reefs-risk" target="_blank">Reefs at Risk Database</a> - A global database of <b>coral reefs</b> and threats from a wide range of human activities</li>
 <li><a href="http://data.unep-wcmc.org/" target="_blank">UNEP Ocean Data Viewer</a> - Data for the conservation of <b>marine and coastal biodiversity</b></li>
 <li><a href="http://glovis.usgs.gov/" target="_blank">USGS Global Visualization Viewer</a> - A global, searchable database of historical <b>Landsat imagery</b></li>
+<li><a href="http://hydrosheds.cr.usgs.gov/datadownload.php?reqdata=3demg" target="_blank">USGS/WWF HydroSHEDS</a> - A global, void-filled <b>digital elevation model (DEM)</b> at 90-meter resolution</li>
 <li><a href="http://data.worldbank.org/country" target="_blank">The World Bank</a> - <b>Socioeconomic indicators and microdata</b> by country</li>
 <li><a href="http://www.worldpop.org.uk/data/" target="_blank">Worldpop</a> - High resolution, contemporary data on <b>human population</b> distributions</li>
 <p></p>
@@ -234,10 +236,13 @@ Spatial and tabular data typically require some amount of processing before they
 <i>A: We have compiled a select list of global and regional marine planning databases (see above). Environmental NGOs and local government agencies often have data available upon request or through a data sharing agreement. Some partners and collaborators may also have a network of data sources. When requesting data, be clear and transparent about how your team intends to use the information.  Another good source is the peer-reviewed scientific literature.  Even if you don’t have data from your specific site to parameterize models, you may be able to find data from the larger region around your site in a published paper (e.g., supplemental text in <a href="docs/Arkema_etal_2014_EL_SI.pdf" target="_blank">Arkema et al. 2014</a>).  Generally, data about the spatial distribution and intensity of human activities that reflect your current and possible future management scenarios (i.e., zones of human uses if relevant to your process) will come from local government agencies.  Maps of habitats and species can be acquired from global databases and local or international NGOs.  Parameters and other input data for ecosystem service models generally come from scientific experts and their local data, the peer reviewed literature, and global databases.</i><br>
 <p></p>
 <b>Q: How do I handle data gaps?</b><br>
-<i>A: Lack of data can present a serious challenge. A GIS analyst may be able to compile different sources of information and piece them together as a continuous data set (e.g., seagrass data sets for the Unites States in <a href="docs/Arkema_etal_2013_NCC_SI.pdf" target="_blank">Arkema et al. 2013</a>). Also, keep in mind that stakeholders often respond well to qualitative outputs too. Ultimately, it's important to be clear throughout the process as to where there is uncertainty or lack of confidence due to paucity of information.</i>
+<i>A: Lack of data can present a serious challenge. A GIS analyst may be able to compile different sources of information and piece them together as a continuous data set (e.g., seagrass data sets for the United States in <a href="docs/Arkema_etal_2013_NCC_SI.pdf" target="_blank">Arkema et al. 2013</a>). Also, keep in mind that stakeholders often respond well to qualitative outputs too. Ultimately, it's important to be clear throughout the process as to where there is uncertainty or lack of confidence due to paucity of information.</i>
 <p></p>
 <b>Q: How much is <u>enough</u> data?</b><br>
 <i>A: Revisit the project objectives and methodologies outlined during the scoping process. Begin by collecting enough data to do preliminary analysis or to run the selected decision support tool. It is often easier and more pragmatic to add and refine data throughout the process rather than waiting for "final" data.</i>
+<p></p>
+<b>Q: How does InVEST lack of data for model inputs?</b><br>
+<i>A: InVEST was designed to be flexible and applied at multiple scales.  We provide global and regional base data with InVEST to get you started running models in your study area right away.  These initial runs can help you identify data gaps and guide future data collection efforts.  </i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
