--- a/links.html
+++ b/links.html
@@ -160,6 +160,10 @@ Use the expand [+] button to explore readings and other online resources for eac
 <li><a href="http://marineecosystemservices.org/" target="_blank">Marine Ecosystem Services Partnership</a> - A searchable database of nearly 900 studies on marine ES valuation</li>
 <li><a href="http://bluesolutions.info/solutions/" target="_blank">Blue Solutions</a> - A database of solutions to marine and coastal challenges that are impactful, scalable, and can be replicated</li>
 <li><a href="https://nicholas.duke.edu/del/upcoming-executive-education-courses/cmsp" target="_blank">CMSP Training Courses</a> - Free in-person and online training for coastal managers and marine planning practitioners</li>
+<li><a href="http://oceanplanning.org/" target="_blank">OceanPlanning.org</a> - A multi-stakeholder, data-driven public process to understand what people want for the future of their oceans, analyze the trade-offs among different uses of ocean space and resources, and coordinate management in a way that maximizes ecological, economic, and social values</li>
+
+</li>
+
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h4>1. Scope</h4>
@@ -171,7 +175,6 @@ Use the expand [+] button to explore readings and other online resources for eac
 <li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a> (See "Section 4.1. Scope")</li>
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
 <li><a href="http://openchannels.org/" target="_blank">OpenChannels</a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
-<li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank">MESH Scoping Tool</a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
 <li><a href="http://marineecosystemservices.org/" target="_blank">Marine Ecosystem Services Partnership</a> - A searchable database of nearly 900 studies on marine ES valuation</li>
 <li><a href="http://bluesolutions.info/solutions/" target="_blank">Blue Solutions</a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
 <li><a href="https://nicholas.duke.edu/del/upcoming-executive-education-courses/cmsp" target="_blank">CMSP Training Courses</a> - Free in-person and online training for coastal managers and marine planning practitioners</li>
