--- a/scope.html
+++ b/scope.html
@@ -205,6 +205,9 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 <b>Q: How much scoping is <i>enough</i>?</b><br>
 <i>A: Scoping should match the scale of the project. Scoping can start with a brief description of work (e.g., report), but may end up being a longer, iterative process (see our Barbados example). Remember that scoping happens in stages and is typically part of an iterative process. Data limitations, combined with the need for further scenario development and synthesis of initial results, may require additional literature review, new partners, or the need for refined questions.</i><br>
 <p></p>
+<b>Q: How do you achieve consensus on how different services should be valued, especially with a large and varied group of marine planning practitioners/stakeholders?  And how does InVEST fit in terms of valuing priority ecosystem services?</b><br>
+<i>A: The InVEST tools were designed to be geared towards stakeholder's preferences and flexible to how valuation of ecosystem services is carried out.  Values can be monetary, or in terms of number of people affected, pounds of fishery landings, jobs, etc.  InVEST can accomodate myriad requests to provide different metrics for marine planning (data and information permitting).</i><br>
+<p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
@@ -215,7 +218,6 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 <li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a> (See "Section 4.1. Scope")</li>
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
 <li><a href="http://openchannels.org/" target="_blank">OpenChannels</a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
-<li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank">MESH Scoping Tool</a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
 <li><a href="http://marineecosystemservices.org/" target="_blank">Marine Ecosystem Services Partnership</a> - A searchable database of nearly 900 studies on marine ES valuation</li>
 <li><a href="http://bluesolutions.info/solutions/" target="_blank">Blue Solutions</a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
 <li><a href="https://nicholas.duke.edu/del/upcoming-executive-education-courses/cmsp" target="_blank">CMSP Training Courses</a> - Free in-person and online training for coastal managers and marine planning practitioners</li>
